--- a/Style/Signin.css
+++ b/Style/Signin.css
@@ -152,6 +152,7 @@
     font-weight: 700;
     font-size: 20px;
     font-family: Poppins, sans-serif;
+    border-width: 0;
     border-radius: 255px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
     background-color: #57e5f2;
@@ -172,6 +173,7 @@
     font-weight: 700;
     font-size: 20px;
     font-family: Poppins, sans-serif;
+    border-width: 0;
     border-radius: 255px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
     background-color: #08a7ce;
