--- a/Style/Welcome.css
+++ b/Style/Welcome.css
@@ -80,6 +80,7 @@
     font-weight: 700;
     font-size: 20px;
     font-family: Poppins, sans-serif;
+    border-width: 0;
     border-radius: 255px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
     background-color: #57e5f2;
@@ -99,6 +100,7 @@
     font-weight: 700;
     font-size: 20px;
     font-family: Poppins, sans-serif;
+    border-width: 0;
     border-radius: 255px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
     background-color: #08a7ce;
