--- a/Style/Dashboard.css
+++ b/Style/Dashboard.css
@@ -72,7 +72,7 @@ active{
 }
 /*main body section*/
 .main-content{
-    position: relative;
+    position: realative;
     background: #ebe9e9;
     width: 100%;
     padding: 1rem;
@@ -125,3 +125,80 @@ active{
 }
 
 /*card container*/
+.card-container{
+    background: #ffff;
+    padding: 2rem;
+    border-radius: 15px;
+
+}
+
+.card-wrapper{
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.main-title{
+    color: #033256;
+    padding-bottom: 10px;
+    font-size: 20px;
+}
+.turtle-card{
+    background: #d0f6ff;
+    border-radius: 15px;
+    padding: 1.2rem;
+    width: 48%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+
+}
+.turtle-card:hover{
+    box-shadow: 2px 2px 0 2px #4b4b4b36;
+    transform: translateY(-5px);
+    background: #08a7ce;
+    color: #ffff;
+}
+.card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.ammount{
+    display: flex;
+    flex-direction: column;
+}
+.title{
+    font-size: 25px;
+    font-weight: 700;
+}
+.ammount-value{
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+    padding-top: 20px;
+}
+
+.percentage-card{
+    background: #d0f6ff;
+    border-radius: 15px;
+    padding: 1.2rem;
+    width: 48%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+
+}
+.percentage-card:hover{
+    box-shadow: 2px 2px 0 2px #4b4b4b36;
+    transform: translateY(-5px);
+    background: #08a7ce;
+    color: #ffff;
+}
