--- a/Style/Dashboard.css
+++ b/Style/Dashboard.css
@@ -277,3 +277,46 @@ active{
     font-size: 20px;
     font-weight: bolder;
 }
+
+/* water quality card*/
+.water-card-container{
+    margin-top: 1rem;
+    background: #ffff;
+    padding: 2rem;
+    border-radius: 15px;
+}
+.water-card-wrapper{
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.water-card{
+    background: #d0f6ff;
+    border-radius: 15px;
+    padding: 1.2rem;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+
+}
+.water-card:hover{
+    box-shadow: 2px 2px 0 2px #4b4b4b36;
+    transform: translateY(-5px);
+    background: #08a7ce;
+    color: #ffff;
+}
+.water-title{
+    color: #033256;
+    padding-bottom: 10px;
+    font-size: 50px;
+    font-weight: bolder;
+}
+.quality-value{
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+}
