--- a/Style/Welcome.css
+++ b/Style/Welcome.css
@@ -17,7 +17,7 @@
 
   .header {
     display: flex;
-    margin-top: 0px;
+    margin-top: 7rem;
     width: 602px;
     max-width: 100%;
     flex-direction: column;
@@ -46,8 +46,9 @@
     aspect-ratio: 1;
     object-fit: auto;
     object-position: center;
-    width: 100%;
-    align-self: stretch;
+    width: 75%;
+    height: 75%;
+    align-self: center;
     margin-top: 48px;
   }
 
@@ -77,16 +78,21 @@
   }
 
   .signin-btn {
+    text-decoration: none;
+    cursor: pointer;
     font-weight: 700;
     font-size: 20px;
     font-family: Poppins, sans-serif;
     border-width: 0;
-    border-radius: 255px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
     background-color: #57e5f2;
     flex-grow: 1;
     justify-content: center;
-    padding: 19px 51px;
+    padding: 20px 60px;
+  }
+  .signin-btn:hover {
+    background-color: #08a7ce;
+    color: #fff;
   }
 
   @media (max-width: 991px) {
@@ -97,17 +103,21 @@
   }
 
   .exit-btn {
+    cursor: pointer;
     font-weight: 700;
     font-size: 20px;
     font-family: Poppins, sans-serif;
     border-width: 0;
-    border-radius: 255px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
     background-color: #08a7ce;
     flex-grow: 1;
     justify-content: center;
     align-items: center;
     padding: 24px 60px;
+  }
+  .exit-btn:hover {
+    background-color: #57e5f2;
+    color: #fff;
   }
 
   @media (max-width: 991px) {
